--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,23 @@
-.text-main {
-    color: #6fffe9;
+.bg-main{
+    background-color: #0F0F0F;
 }
 
-.text-sec {
-    color: #5bc0be;
+.bg-sec{
+    background-color: #232D3F;
 }
 
-.text-three {
-    color: #3a506b;
+.text-main{
+    color: #008170;
 }
 
-.text-four {
-    color: #1c2541;
+.text-sec{
+    color: #005B41;
 }
 
-.bg-main {
-    background-color: #0b132b;
-}
-
-.bg-sec {
-    background-color: #3a506b;
-}
-
-.glass-effect {
-    background: rgba(153, 153, 153, 0.5);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(153, 153, 153, 0.25);
-}
-
-.btn-primary {
-    background-color: #1c2541 !important;
-    color: #6fffe9 !important;
-    border-color: #3a506b !important;
-}
-
-.btn-primary:hover {
-    background-color: #3a506b !important;
-    color: #5bc0be !important;
-}
-
-.relative {
-    position: relative;
-}
-
-.password-toggle {
-    position: absolute;
-    top: 50%;
-    right: 20px;
+.translate-y-50 {
     transform: translateY(-50%);
-    padding: 0px 20px;
+}
+
+.right-5px {
+    right:5px;
 }
