--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,18 @@
 .text-decoration-none {
     text-decoration: none !important;
 }
+
+.border-side {
+    border-right: 2px solid #008170;
+}
+
+.z-index-5 {
+    z-index: 10 !important;
+}
+
+@media screen and (max-width:576px) {
+    .border-side {
+        border-right:none;
+        border-bottom:2px solid #008170;
+    } 
+}
