--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,14 @@
   min-height: calc(100vh - 80px) !important;
 }
 
+.vendor-name-link {
+    text-decoration: none;
+    color: #008170;
+    font-weight: 600;
+    font-size: 1.2rem;
+    
+}
+
 @media (max-width: 575.98px) {
   .container-fluid.bg-main {
     padding-top: 0;
