--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
     background-color: #232D3F;
 }
 
+.bg-custom {
+    background-color: #2c1a62;
+}
+
 .btn-main{
     background-color: #008170 !important;
     border:1px solid #005B41 !important;
@@ -49,6 +53,13 @@
 .pt-12 {
     padding-top: 12px !important;
 }
+.pb-10 {
+    padding-bottom: 120px !important;
+}
+
+.width-215px {
+    width: 215px !important;
+}
 
 @media screen and (max-width:576px) {
     .border-rside {
@@ -66,7 +77,7 @@
 }
 
 .container-fluid.bg-main {
-  padding: 60px 0 20px; 
+  padding: 20px 0 20px; 
   min-height: calc(100vh - 80px) !important;
 }
 
